opam-version: "2.0"
maintainer: "Guillaume Petiot <guillaume@tarides.com>"
authors: ["Guillaume Petiot"]
homepage: "https://github.com/gpetiot/ocamlformat-repo"
dev-repo: "git+https://github.com/gpetiot/ocamlformat-repo.git"
bug-reports: "https://github.com/gpetiot/ocamlformat-repo/issues"
doc: "https://github.com/gpetiot/ocamlformat-repo"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.4.0"}
  "bos"
  "cmdliner"
  "ocaml-version"
  "opam-state"
]

synopsis: "Manage ocamlformat versions"
description: """
`ocamlformat-repo` is a tool to manage the versions of
[ocamlformat]](https://github.com/ocaml-ppx/ocamlformat).
"""
